Fix the z-index on the sub-nav
A sub-nav with a z-index of 1 can sit below other blocks when open. Specifically the cover block overlay.

fixes #20203

--- a/packages/block-library/src/navigation/style.scss
+++ b/packages/block-library/src/navigation/style.scss
@@ -134,7 +134,7 @@ $navigation-sub-menu-width: $grid-size * 25;
 
 			// Position (first level)
 			position: absolute;
-			z-index: 1;
+			z-index: 2;
 			top: 100%;
 			left: 0; // just under the main menu item.
 
